--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,12 @@
 server:
   port: 9001
+
 spring:
   application:
     name: DEPARTMENT-SERVICE
+  cloud:
+    config:
+      uri: http://localhost:9296
   datasource:
     dirverClassName: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/dep_service
@@ -12,6 +16,8 @@ spring:
     hibernate.ddl-auto: update
     generate-ddl: true
     show-sql: true
+  zipkin:
+    base-url: http://127.0.0.1:9411/
 
 eureka:
   client:
@@ -19,5 +25,5 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://localhost:8761/eureka/
-    instance:
-      hostname: localhost
+  instance:
+    hostname: localhost
